Closed
Bug 168634
Opened 23 years ago
Closed 23 years ago
Type ahead find only in visible page
Categories
(SeaMonkey :: Find In Page, defect, P2)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.2beta
People
(Reporter: marius, Assigned: aaronlev)
References
Details
Attachments
(1 file)
Often on large pages when I scroll down, and then use the find ahead feature, I
get a hit on another place in the page, outside my view. Most of the time, I see
the link, and then don't want it to match somewhere else.
This happens when there are many links with the same name, like "see more" etc.
Therefore I think this should be an option, or/and something more intelligent,
as search the whole page if not finding anything in the visible part of the page.
| Assignee | ||
Comment 1•23 years ago
|
||
It currently has 2 behaviors:
1. If an element on the page is focused or selected it will just search forward
from there.
2. If not (the page is focused), it prefers to find something visible on the
page. If it can't, then it will look below the viewport, and then finally wrap
around.
I've had people tell me this is good behavior, and what they want. Could you
specify more clearly for me what you'd like to see instead? You want it to only
find visible matches?
Blocks: isearch
| Reporter | ||
Comment 2•23 years ago
|
||
Could you explain what you in 1. mean by element?
I don't see 2. Steps to reproduce:
-Go to www.amazon.com
-scroll down below the first "read more"
-type "read more"
-the focus changes to the first "read more"-link (even after I have clicked on a
blank space somewhere under the first occurece).
(it might be because the search field is selected by default when I enter. If
this is the explanations, maybe 1. should distinguish between scripts changing
focus and me setting focus)
| Assignee | ||
Comment 3•23 years ago
|
||
Ahh, I know why - it's because the page is 2 columns. You're right, it's not
working the way it should. I'll take a look at it. Thanks.
Severity: enhancement → normal
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P2
Target Milestone: --- → mozilla1.2beta
| Assignee | ||
Comment 4•23 years ago
|
||
Comment on attachment 100664 [details] [diff] [review]
Fixes problem by remembering "isFirstVisiblePreferred" as member variable, so that it doesn't get reset to false after 1st char is typed
r=kyle
Attachment #100664 -
Flags: review+
Comment 6•23 years ago
|
||
sr=bzbarsky
| Assignee | ||
Comment 7•23 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•