Bug 168634. Type Ahead Find should prefer visible match. r=kyle, sr=bzbarsky